--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.15...3.20)
 
-project(FooBar
+project(OpenGL_Demo
     VERSION 0.1
-    DESCRIPTION "An awesome project"
+    DESCRIPTION "An awesome opengl demo"
     LANGUAGES CXX)
 
 # Set the default build type if non is specified
@@ -17,73 +17,12 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
         "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
 endif()
 
-# Only if this is the top level project (not included with add_subdirectory)
-if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-    # Use -std=c++xx instead of -std=g++xx
-    set(CMAKE_CXX_EXTENSIONS OFF)
-
-    # Support folders in IDEs
-    set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-
-    # Testing only available for top level projects. It calls enable_testing
-    # which must be in the main CMakeLists.
-    include(CTest)
-
-    # Generate documentation using Doxygen
-    find_package(Doxygen)
-    if(Doxygen_FOUND)
-        add_subdirectory(docs)
-    else()
-        message(STATUS "Doxygen not found, not building docs")
-    endif()
-endif()
-
-# Use for platform independent install dirs, despite being called GNU
 include(GNUInstallDirs)
 
-# Create config.h with project version numbers
-configure_File(cmake/config.h.in include/config.h)
-include_directories(PRIVATE ${CMAKE_BINARY_DIR}/include)
-
-# Use FetchContent instead of find_package for small stuff? Must be exported
-# with install targets to work.
-#include(FetchContent)
-
-# Formatting library
-#FetchContent_Declare(
-#    fmtlib
-#    GIT_REPOSITORY https://github.com/fmtlib/fmt.git
-#    GIT_TAG 5.3.0)
-#FetchContent_MakeAvailable(fmtlib)
-# Adds fmt::fmt
-
-#find_package(fmt REQUIRED)
+find_package(Threads REQUIRED)
+find_package(SFML 2.5 REQUIRED CONFIG COMPONENTS graphics window system)
+find_package(GLEW REQUIRED)
+find_package(OpenGL REQUIRED)
+find_package(glm REQUIRED CONFIG)
 
 add_subdirectory(src)
-
-# Create Targets file
-install(EXPORT ${PROJECT_NAME}Targets
-    FILE ${PROJECT_NAME}Targets.cmake
-    NAMESPACE ${PROJECT_NAME}::
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
-
-# Generate ConfigVersion file
-include(CMakePackageConfigHelpers)
-write_basic_package_version_file(
-    ${PROJECT_NAME}ConfigVersion.cmake
-    VERSION ${PROJECT_VERSION}
-    COMPATIBILITY AnyNewerVersion)
-
-# Copy the Config file to the build dir
-configure_file(cmake/ProjectConfig.cmake ${PROJECT_NAME}Config.cmake @ONLY)
-
-# Add Config and ConfigVersion files to install
-install(FILES
-    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
-    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
-
-# Add tests
-#if((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MODERN_CMAKE_BUILD_TESTING) AND BUILD_TESTING)
-#    add_subdirectory(tests)
-#endif()
