--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,62 +1,2 @@
 
-macro(library_component target)
-target_include_directories(${target}
-    PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
-
-#set_property(TARGET ${TARGET} PROPERTY POSITION_INDEPENDENT_CODE ON)
-target_compile_features(${target} PUBLIC cxx_std_17)
-
-#Check for Inter Procedural Optimization(IPO)
-include(CheckIPOSupported)
-check_ipo_supported(RESULT result)
-if(result)
-    set_target_properties(${target} PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
-endif()
-
-#Add ALIAS target for use in add_subdirectory or build directory
-add_library(${PROJECT_NAME}::${target} ALIAS ${target})
-
-#Add target to Project Targets for install
-install(TARGETS ${target}
-    EXPORT ${PROJECT_NAME}Targets
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}) # This is for Windows?
-
-## Include the headers in install
-install(DIRECTORY
-    include/
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${target})
-endmacro()
-
-add_subdirectory(comp_a)
-
-set(TARGET foo)
-
-add_library(${TARGET} INTERFACE)
-
-# target_link_libraries(${TARGET} INTERFACE fmt::fmt)
-
-# Check for Inter Procedural Optimization (IPO)
-include(CheckIPOSupported)
-check_ipo_supported(RESULT result)
-if(result)
-    set_target_properties(${TARGET} PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
-endif()
-
-# Add ALIAS target for use in add_subdirectory or build directory
-add_library(${PROJECT_NAME}::${TARGET} ALIAS ${TARGET})
-
-# IDE support, show headers in a folder
-source_group(TREE "${PROJECT_SOURCE_DIR}/include"
-    PREFIX "Header Files"
-    FILES ${HEADER_LIST})
-
-# Add target to Project Targets for install
-install(TARGETS ${TARGET}
-    EXPORT ${PROJECT_NAME}Targets
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}) # This is for Windows?
+add_subdirectory(00_hello_window)
