--- a/src/00_hello_window/CMakeLists.txt
+++ b/src/00_hello_window/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(TARGET 00_hello_window)
+get_filename_component(PARENT_DIR ${CMAKE_CURRENT_LIST_DIR} NAME)
+set(TARGET ${PARENT_DIR})
 
 add_executable(${TARGET} main.cpp)
 
