--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(01_hello_triangle)
 add_subdirectory(02_hello_quad)
 add_subdirectory(03_shader)
 add_subdirectory(04_texture)
+add_subdirectory(05_buffer)
