--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(02_hello_quad)
 add_subdirectory(03_shader)
 add_subdirectory(04_texture)
 add_subdirectory(05_buffer)
+add_subdirectory(06_frame_buffer)
