--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(03_shader)
 add_subdirectory(04_texture)
 add_subdirectory(05_buffer)
 add_subdirectory(06_frame_buffer)
+add_subdirectory(07_post_process)
