--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(04_texture)
 add_subdirectory(05_buffer)
 add_subdirectory(06_frame_buffer)
 add_subdirectory(07_post_process)
+add_subdirectory(08_blit)
