--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(05_buffer)
 add_subdirectory(06_frame_buffer)
 add_subdirectory(07_post_process)
 add_subdirectory(08_blit)
+add_subdirectory(09_transform)
