--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory(06_frame_buffer)
 add_subdirectory(07_post_process)
 add_subdirectory(08_blit)
 add_subdirectory(09_transform)
+add_subdirectory(10_instanced)
