--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
 # Some rules taken from https://github.com/github/gitignore/blob/master/CMake.gitignore
 
+# Created by https://www.gitignore.io/api/visualstudiocode
+# Edit at https://www.gitignore.io/?templates=visualstudiocode
+
+### VisualStudioCode ###
+.vscode/**/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
+
+# End of https://www.gitignore.io/api/visualstudiocode
 # IDE's
-.vscode/
 tags
 
 # Compiled Object files
